[package]
name = "bevy-inv"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# REMOVE DYNAMIC LINKING FOR RELEASE VERSION
[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }

# [dependencies]
# bevy = "0.13.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
